docs: fix all markdown lint errors in v2.13.1 release notes
Fixed 40 markdown linting violations:
- Added blank lines around all headings (MD022)
- Added blank lines around all lists (MD032)
- Added blank lines around fenced code blocks (MD031)
- Wrapped bare URLs in angle brackets (MD034)
- Fixed line length violations (MD013)

All markdown files now pass markdownlint validation.

--- a/releases/v2.13.1.md
+++ b/releases/v2.13.1.md
@@ -3,11 +3,13 @@
 ## 🔧 **Critical Bug Fixes**
 
 ### Fixed Recurring "First Time Setup" Dialog
+
 - **Issue**: Users experienced repeated "First Time Setup" dialogs even after completing initial setup
 - **Solution**: Enhanced setup wizard with auto-recovery logic and improved configuration persistence
 - **Impact**: Eliminates authentication loops and provides seamless user experience
 
 ### Enhanced Setup Wizard
+
 - Automatic detection of existing installations
 - Improved configuration persistence across application restarts
 - Smart recovery from incomplete setup states
@@ -16,6 +18,7 @@
 ## 🖼️ **New Screenshot Gallery**
 
 ### Comprehensive Interface Showcase
+
 Added professional screenshots demonstrating the complete PyQt6 interface:
 
 - **Dashboard Overview** - Main dashboard with real-time security status and system overview
@@ -26,6 +29,7 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 - **Settings & Configuration** - Customizable security policies and application preferences
 
 ### User Experience Benefits
+
 - Clear visual understanding of application capabilities before installation
 - Professional presentation for potential users and contributors
 - Demonstrates the comprehensive nature of the security suite
@@ -34,12 +38,14 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 ## 🛡️ **Security Improvements**
 
 ### Enhanced Security Framework
+
 - Replaced direct `subprocess.run` calls with `run_secure()` in setup wizard
 - Enhanced privilege escalation protection throughout the application
 - Improved input validation and sanitization
 - Strengthened authentication management
 
 ### Privilege Escalation Protection
+
 - PolicyKit integration with secure validation
 - Multi-layer command injection prevention
 - Strict input whitelisting and validation
@@ -48,6 +54,7 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 ## 📚 **Documentation Enhancements**
 
 ### New Comprehensive Build Guide
+
 - Created `docs/developer/BUILD_GUIDE.md` with complete build system documentation
 - Modern development workflow instructions
 - Container build support
@@ -55,12 +62,14 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 - Troubleshooting and validation procedures
 
 ### Updated Developer Documentation
+
 - Enhanced `CONTRIBUTING.md` with modern setup procedures
 - Updated `README.md` with screenshot gallery and current installation instructions
 - Improved version management documentation
 - Added recent improvements tracking
 
 ### Version Management System
+
 - Centralized version control with single source of truth (`VERSION` file)
 - Automated synchronization across all project files
 - Enhanced version validation and consistency checking
@@ -69,18 +78,21 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 ## ⚡ **Performance Improvements**
 
 ### Startup Optimization
+
 - **58% faster startup** with intelligent background processing
 - Deferred loading of non-critical components
 - Optimized initialization sequence
 - Progressive UI rendering
 
 ### Memory Efficiency
+
 - Advanced optimization for systems with 2GB+ RAM
 - Improved resource management during scanning operations
 - Multi-threaded architecture for responsive UI
 - Background security operations without UI blocking
 
 ### Scanning Engine
+
 - Multi-threaded scanning with improved performance
 - Optimized ClamAV integration
 - Enhanced real-time monitoring efficiency
@@ -89,18 +101,21 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 ## 🔧 **Technical Improvements**
 
 ### Build System Modernization
+
 - Enhanced Makefile with comprehensive development targets
 - Modern package manager support (uv, pnpm) with legacy fallbacks
 - Improved validation and quality assurance tools
 - Automated version synchronization system
 
 ### Code Quality
+
 - Comprehensive markdown linting compliance
 - Enhanced spell checking and validation
 - Improved error handling and logging
 - Standardized development workflows
 
 ### Infrastructure
+
 - Repository organization improvements
 - Enhanced tool categorization in `scripts/tools/`
 - Improved CI/CD pipeline integration
@@ -109,6 +124,7 @@ Added professional screenshots demonstrating the complete PyQt6 interface:
 ## 🎯 **Upgrade Instructions**
 
 ### For Existing Users
+
 ```bash
 # Pull latest changes
 git pull origin stable
@@ -121,6 +137,7 @@ npm run quick:validate
 ```
 
 ### New Installation
+
 ```bash
 # Clone repository
 git clone https://github.com/asafelobotomy/xanadOS-Search_Destroy.git
@@ -153,11 +170,11 @@ make run
 
 ## 🔗 **Links & Resources**
 
-- **Repository**: https://github.com/asafelobotomy/xanadOS-Search_Destroy
-- **Documentation**: https://github.com/asafelobotomy/xanadOS-Search_Destroy/tree/master/docs
-- **Build Guide**: https://github.com/asafelobotomy/xanadOS-Search_Destroy/blob/master/docs/developer/BUILD_GUIDE.md
-- **Issue Tracker**: https://github.com/asafelobotomy/xanadOS-Search_Destroy/issues
-- **Security Report**: https://github.com/asafelobotomy/xanadOS-Search_Destroy/blob/master/docs/project/SECURITY_PERFORMANCE_REPORT.md
+- **Repository**: <https://github.com/asafelobotomy/xanadOS-Search_Destroy>
+- **Documentation**: <https://github.com/asafelobotomy/xanadOS-Search_Destroy/tree/master/docs>
+- **Build Guide**: <https://github.com/asafelobotomy/xanadOS-Search_Destroy/blob/master/docs/developer/BUILD_GUIDE.md>
+- **Issue Tracker**: <https://github.com/asafelobotomy/xanadOS-Search_Destroy/issues>
+- **Security Report**: <https://github.com/asafelobotomy/xanadOS-Search_Destroy/blob/master/docs/project/SECURITY_PERFORMANCE_REPORT.md>
 
 ## 🏆 **Quality Metrics**
 
@@ -169,8 +186,10 @@ make run
 
 ## 🙏 **Acknowledgments**
 
-Thank you to all users who reported the setup dialog issue and provided feedback that helped improve the user experience. Special thanks to contributors who helped with testing and validation.
+Thank you to all users who reported the setup dialog issue and provided feedback that helped improve
+the user experience. Special thanks to contributors who helped with testing and validation.
 
 ---
 
-**Full Changelog**: https://github.com/asafelobotomy/xanadOS-Search_Destroy/compare/v2.11.1...v2.13.1
+**Full Changelog**:
+<https://github.com/asafelobotomy/xanadOS-Search_Destroy/compare/v2.11.1...v2.13.1>
